# LoopForge

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _debug_output.txt  agent.md  full_suite_results.txt  pyproject.toml  test_cli_stderr.txt  test_full2_output.txt  test_run2_output.txt
.agent/adapters/: kilo-code.sh  local_implementation_adapter.py
.agent/checks/: classify_patch_risk.py  diff_policy.py  generate_complete_patch.py  isolated_process.py  validate_artifacts.py  validate_implementation_result.py
.agent/policies/: local-implementation-adapter.json  prompt-contract.json  risk-rules.json
.agent/prompts/: research.md
.agent/schemas/: implementation-result.schema.json
.github/: fix-issue-9.trigger  patch-issue-9.py
.github/ISSUE_TEMPLATE/: cli-ux-bug.md
.github/workflows/: apply-issue-8-fix.yml  fix-issue-9.yml
.loopforge/: config.json  memory.md
.loopforge/packs/: README.md
.loopforge/skills/: README.md
.loopforge/templates/: exchange.json  loop.md  scratch.md
docs/: cli-guidelines-progress.md  cli-ux-command-plan.md  defect-priority-map.md  implementation-plan.md  migration-map.md  product-architecture.md  regression-matrix.md  support-matrix.md  textual-foundation.md
docs/agent/: 00-overview.md  01-modules.md  02-architecture.md  03-coding-patterns.md  04-reuse-catalog.md  05-how-to-add-feature.md  06-build-test-run.md  07-danger-zones.md
docs/benchmarks/: README.md  (+1 more)
tests/: test_cli.py  test_cli_evidence.py  test_cli_presentation.py  test_cli_structure.py  test_cli_textual_app.py  test_cli_tui.py  test_cli_tui_performance_contract.py  test_cli_ux_contracts.py  test_engine_services.py  test_implementation_result_integrity.py
tools/: apply_issue_8_fix.py  benchmark_tui.py
(+175 files in other folders)
