[project]
name = "loopforge"
version = "0.1.0"
description = "Portable agentic workflow engine for bounded autonomous work loops."
requires-python = ">=3.11"
dependencies = [
  "prompt_toolkit>=3.0",
  "rich>=13.0",
]

[project.scripts]
loopforge = "loopforge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
