[project]
name = "loopforge"
version = "0.1.0"
description = "Portable agentic workflow engine for bounded autonomous work loops."
requires-python = ">=3.11"
dependencies = [
  "prompt_toolkit>=3.0",
  "rich>=13.0",
  # The Textual full-screen application uses App workers, Pilot tests, and the
  # command palette APIs verified against Textual 8.x.
  "textual>=8.0,<9",
]

[project.scripts]
loopforge = "loopforge.cli:main"

[tool.setuptools.package-data]
loopforge = [
  "contracts/policies/*.json",
  "contracts/schemas/*.json",
  "packs/*.md",
  "packs/*/*.json",
  "packs/*/*.md",
  "packs/*/agents/*.md",
  "packs/*/skills/*/*.md",
  "cli/textual_app/*.tcss",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
